feat: add all structure js

--- a/mail/css/style.css
+++ b/mail/css/style.css
@@ -34,3 +34,11 @@ form > *{
     cursor: pointer;
     width: fit-content;
 }
+
+.si , .no{
+    display: none;
+}   
+
+.display{
+    display: block;
+}
