--- a/dadi/css/style.css
+++ b/dadi/css/style.css
@@ -12,8 +12,7 @@ main{
     margin: 0 auto;
     font-size: 40px; 
     text-align: center;
-    
-    
+     
 }
 
 main > *{
@@ -25,7 +24,9 @@ h2{
     text-align: center;
 }
 
-#btn{
+
+
+.btn{
     margin: 0 auto;
     border-radius: 8px;
     border: 2px solid green;
@@ -54,6 +55,7 @@ h2{
     gap: 30px;
 }
 
+
 .bot{
     color: brown;
 }
@@ -65,7 +67,7 @@ h2{
     justify-content: space-around;
     width: 200px;
     height: 200px;
-    background-color: rgb(176, 171, 171);
+    background-color: rgb(229, 208, 208);
     border-radius: 10px;
     
 }
@@ -156,7 +158,7 @@ h2{
     right: 20px;
 }
 
-.dadox5{
+.dadox6{
     flex-direction: column;
     gap: 25%;
 }
